--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,20 @@
 on: [push, pull_request]
 name: Build
 jobs:
-  build:
-    strategy:
-      matrix:
-        go-version: [1.20.x, 1.21.x, 1.22.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Build
-        run: go build ./...
-      - name: Test
-        run: go test -cover github.com/rwestlund/quickbooks-go
+    build:
+        strategy:
+            matrix:
+                go-version: [stable, oldstable]
+                os: [ubuntu-latest, macos-latest, windows-latest]
+        runs-on: ${{ matrix.os }}
+        steps:
+            - name: Install Go
+              uses: actions/setup-go@v5
+              with:
+                  go-version: ${{ matrix.go-version }}
+            - name: Checkout code
+              uses: actions/checkout@v4
+            - name: Build
+              run: go build ./...
+            - name: Test
+              run: go test -cover .
